# ctf-assistant

./: .gitignore  ai_client.py  config.py  detectors.py  main.py  password_cracking.py  pyproject.toml  requirements.txt  test_all.py  test_comprehensive.txt  test_detectors.py  test_input.txt
ctf/: ai_client.py  config.py  file_use.py  main.py  password_cracking.py
ctf_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
