[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ctf-assistant"
version = "0.1.0"
description = "CTF Assistant — encoding detection, hash cracking, AI integration"
requires-python = ">=3.10"
dependencies = [
    "requests",
]

[project.scripts]
ctf = "ctf.main:main"